Boids più piccoli Inserimento lettura di testo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,9 @@
         "semaphore": "cpp",
         "sstream": "cpp",
         "stop_token": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "allocator": "cpp",
+        "span": "cpp",
+        "cinttypes": "cpp"
     }
 }
