Aggiunti test, 3 non funzionano. Problema costruttori parameters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,8 +34,8 @@ target_link_libraries (main PRIVATE ROOT::Core ROOT::Hist ROOT::HistPainter ROOT
 if (BUILD_TESTING)
 
   # aggiungi l'eseguibile all.t
-  # add_executable(boid.t boids.test.cpp boid.cpp vectors.cpp)
-  # target_link_libraries(boid.t PRIVATE sfml-graphics)
+  add_executable(boid.t boids.test.cpp boid.cpp vectors.cpp)
+  target_link_libraries(boid.t PRIVATE sfml-graphics)
   add_executable(stats.t statistics.test.cpp boid.cpp vectors.cpp statistics.cpp)
   target_link_libraries(stats.t PRIVATE sfml-graphics)
   # aggiungi l'eseguibile all.t alla lista dei test
